# Ai-Brain

./: .gitignore  CLAUDE.md  FINAL_SUMMARY.md  PROJECT_SUMMARY.md  README.md  requirements.md
.claude/: settings.local.json
.claude/agents/: frontend-lead.md  rag-engineer.md
.claude/commands/: sp.reverse-engineer.md
.claude/skills/: rag-architecture.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  reset_db.py
backend/alembic/: env.py  env_backup.py  script.py.mako
backend/src/: main.py
backend/src/api/: async_deps.py  deps.py
backend/src/api/v1/: admin.py  audit_logs.py  auth.py  authenticated_chat.py  chat.py  knowledge_docs.py  router.py  user_docs.py  vector_chunks.py
backend/src/config/: database.py  settings.py
backend/src/database/: connection.py  init_db.py
backend/src/models/: __init__.py  audit_log.py  base.py  chat_query.py  chat_response.py  chat_session.py  knowledge_doc.py  upload_session.py  user.py  vector_chunk.py
backend/src/services/: __init__.py  ai.py  audit_service.py  auth.py  chat.py  classification_service.py  embedding_service.py  ingestion.py  ingestion_service.py  knowledge_service.py  rag_service.py  user.py  vector_service.py
backend/src/utils/: embeddings.py  security.py  text_extractor.py  validators.py
backend/tests/unit/: test_basic.py
frontend/: package-lock.json  package.json
specs/001-backend-foundation/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
(+61 files in other folders)
