[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-foundation"
version = "0.1.0"
description = "Backend Foundation for RAG System"
authors = [{name = "Developer", email = "dev@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "pgvector>=0.2.5",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.7.0",
    "alembic>=1.13.3",
    "sqlalchemy>=2.0.36",
    "python-dotenv>=1.0.1",
    "pymupdf>=1.24.10",
    "python-docx>=1.1.2",
    "transformers>=4.45.2",
    "torch>=2.5.1",
    "huggingface-hub>=0.26.2",
    "sentence-transformers>=3.1.1",
    "httpx>=0.28.1",
    "pypdf2>=3.0.1",
    "psycopg2>=2.9.11",
    "bcrypt>=5.0.0",
    "python-jose>=3.5.0",
    "aiohttp>=3.13.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "flake8>=7.1.1",
    "mypy>=1.11.2",
    "isort>=5.13.2",
    "pre-commit>=3.8.0",
    "httpx>=0.27.2"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
